--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
+    "@prisma/client": "^4.12.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^18.0.11",
     "eslint-config-next": "^13.2.4",
     "gts": "^4.0.1",
+    "prisma": "^4.12.0",
     "typescript": "^5.0.3"
   }
 }
