--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "next": "^13.2.4",
+    "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
