--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
     "next": "^13.2.4",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
