--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/server": "^10.18.0",
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
+    "formik": "^2.2.9",
     "next": "^13.2.4",
     "next-auth": "^4.21.1",
     "postcss": "^8.4.21",
