--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
