--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/ws": "^8.5.4",
     "eslint-config-next": "^13.2.4",
     "gts": "^4.0.1",
     "prisma": "^4.12.0",
