--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev:next": "next dev",
+    "dev:wss": "tsx watch src/server/wss-server.ts --tsconfig tsconfig.wss.json",
+    "dev": "run-p dev:*",
+    "build:next": "next build",
+    "build:wss": "tsc --project tsconfig.wss.json",
     "start": "next start",
+    "start:wss": "node build/wss-server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -40,7 +44,9 @@
     "@types/ws": "^8.5.4",
     "eslint-config-next": "^13.2.4",
     "gts": "^4.0.1",
+    "npm-run-all": "^4.1.5",
     "prisma": "^4.12.0",
+    "tsx": "^3.12.6",
     "typescript": "^5.0.3"
   }
 }
